--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ Django==5.2.6
 django-storages==1.14.6
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+git-filter-repo==2.47.0
 jmespath==1.0.1
+pillow==11.3.0
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 s3transfer==0.14.0
 six==1.17.0
 sqlparse==0.5.3
