--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.2.6
 django-storages==1.14.6
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+django-cors-headers==4.4.0
 git-filter-repo==2.47.0
 jmespath==1.0.1
 pillow==11.3.0
